lab1/Test/L1-A-8-50.output
Error Type B at Line 10
Error Type B at Line 11
Error Type B at Line 23
Error Type B at Line 31
Error Type B at Line 38
