lab1/Test/L1-A-8-50.cmm
float Owfvnf8 ( ) {
  int fibw4P1Yy [ 379302872 ] , Vb = HhGd7HT || b19_JCDHpPEu8PTvM 
    > y + - irAWOD_wM [ IGzO8eCkE = H2BY && haelj1U4OnmoLwjif3 
    == - NJWl5YaUs6Fha ( ARtXairTRtyxP = Wk0kqXw0FTJdPSyBf39W 
    - J__j3KiSg_D [ s0kNj_Wv8dlD && DAYEtNQIl != CQZBPUwbRR4B7h 
    - kUcoodN_ ( O8iH_w , yyrN = lqTWiCLWz_kX6 && DSl 
    <= czYSPVLC3z2tRuMObO [ jamgH_iEwkmkClJKFdl || x < 
    ( H4Z7i__y >= ! nnL ) ] ) ] - ! 1878425034 . PpCwaBKMmnOvPvwTsS 
    ) * 1502048338.1527055700 ] / - ! Ymksx8nagqbqw77SAa 
    ( ) / ;
!= }
struct {
};
int ;
struct WXlyO1t Qn5 
;
int a , KOmiRBHbqPc 

;
struct q9S8H0hDia0IIcCvJNd {
  int lZHlTnSBfGmN ;
};
int > xAXnziY ( ) {
  if ( Li6coAv8d ) {
    e ;
    if ( Y8t4 )     if ( _QhvUIC )     fRnNMGAaxXISY5lo 
      ;
else     while ( sul3sr )     AouFfBQK ;


else     if ( NSO2TgBvGIH11TS0CEM <= )     return 
      lvXH ;


  }
}
int ;
int e3VdWj30VgWL ( int P if , int yPcHLbY_GN1NxrMSf 
  ) {
  d8pudj6KDJY ;
}
int ;
int ;
